gallery/output.css
/* ... */
.join.join-horizontal .join-item:last-child:not(:first-child),
  .join.join-horizontal *:last-child:not(:first-child) .join-item {
  border-end-start-radius: 0;
  border-start-start-radius: 0;
  border-end-end-radius: inherit;
  border-start-end-radius: inherit;
}

.menu-horizontal {
  display: inline-flex;
  flex-direction: row;
}

.menu-horizontal > li:not(.menu-title) > details > ul {
  position: absolute;
}

.select-sm {
  height: 2rem;
  min-height: 2rem;
  padding-left: 0.75rem;
  padding-right: 2rem;
  font-size: 0.875rem;
  line-height: 2rem;
}

[dir="rtl"] .select-sm {
  padding-left: 2rem;
  padding-right: 0.75rem;
}

.select-xs {
  height: 1.5rem;
  min-height: 1.5rem;
  padding-left: 0.5rem;
  padding-right: 2rem;
  font-size: 0.75rem;
  line-height: 1rem;
  line-height: 1.625;
}

[dir="rtl"] .select-xs {
  padding-left: 2rem;
  padding-right: 0.5rem;
}

.tabs-md :where(.tab) {
  height: 2rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  line-height: 2;
  --tab-padding: 1rem;
}

.tabs-lg :where(.tab) {
  height: 3rem;
  font-size: 1.125rem;
  line-height: 1.75rem;
  line-height: 2;
  --tab-padding: 1.25rem;
}

.tabs-sm :where(.tab) {
  height: 1.5rem;
  font-size: 0.875rem;
  line-height: .75rem;
  --tab-padding: 0.75rem;
}

.tabs-xs :where(.tab) {
  height: 1.25rem;
  font-size: 0.75rem;
  line-height: .75rem;
  --tab-padding: 0.5rem;
}

.avatar.online:before {
  content: "";
  position: absolute;
  z-index: 10;
  display: block;
  border-radius: 9999px;
  --tw-bg-opacity: 1;
  background-color: var(--fallback-su,oklch(var(--su)/var(--tw-bg-opacity)));
  outline-style: solid;
  outline-width: 2px;
  outline-color: var(--fallback-b1,oklch(var(--b1)/1));
  width: 15%;
  height: 15%;
  top: 7%;
  right: 7%;
}

.card-compact .card-body {
  padding: 1rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.card-compact .card-title {
  margin-bottom: 0.25rem;
}

.card-normal .card-body {
  padding: var(--padding-card, 2rem);
  font-size: 1rem;
  line-height: 1.5rem;
}

.card-normal .card-title {
  margin-bottom: 0.75rem;
}

.drawer-open > .drawer-toggle ~ .drawer-side > .drawer-overlay {
  cursor: default;
  background-color: transparent;
}

.join.join-vertical > :where(*:not(:first-child)) {
  margin-left: 0px;
  margin-right: 0px;
  margin-top: -1px;
}

.join.join-horizontal > :where(*:not(:first-child)) {
  margin-top: 0px;
  margin-bottom: 0px;
  margin-inline-start: -1px;
}

.menu-horizontal > li:not(.menu-title) > details > ul {
  margin-inline-start: 0px;
  margin-top: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-inline-end: 0.5rem;
}

.menu-horizontal > li > details > ul:before {
  content: none;
}

:where(.menu-horizontal > li:not(.menu-title) > details > ul) {
  border-radius: var(--rounded-box, 1rem);
  --tw-bg-opacity: 1;
  background-color: var(--fallback-b1,oklch(var(--b1)/var(--tw-bg-opacity)));
  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}

.collapse {
  visibility: collapse;
}

.fixed {
  position: fixed;
}

.absolute {
  position: absolute;
}

.relative {
  position: relative;
}

.sticky {
  position: sticky;
}

.inset-0 {
  inset: 0px;
}

.top-0 {
  top: 0px;
}

.col-span-1 {
  grid-column: span 1 / span 1;
}

.col-start-2 {
  grid-column-start: 2;
}

.row-span-1 {
  grid-row: span 1 / span 1;
}

.row-span-4 {
  grid-row: span 4 / span 4;
}

.row-start-\[10\] {
  grid-row-start: 10;
}

.row-start-\[11\] {
  grid-row-start: 11;
}

.row-start-\[12\] {
  grid-row-start: 12;
}

.row-start-\[13\] {
  grid-row-start: 13;
}

.row-start-\[14\] {
  grid-row-start: 14;
}

.row-start-\[15\] {
  grid-row-start: 15;
}

.row-start-\[16\] {
  grid-row-start: 16;
}

.row-start-\[17\] {
  grid-row-start: 17;
}

.row-start-\[18\] {
  grid-row-start: 18;
}

.row-start-\[19\] {
  grid-row-start: 19;
}

.row-start-\[1\] {
  grid-row-start: 1;
}

.row-start-\[20\] {
  grid-row-start: 20;
}

.row-start-\[21\] {
  grid-row-start: 21;
}

.row-start-\[22\] {
  grid-row-start: 22;
}

.row-start-\[23\] {
  grid-row-start: 23;
}

.row-start-\[24\] {
  grid-row-start: 24;
}

.row-start-\[25\] {
  grid-row-start: 25;
}

.row-start-\[26\] {
  grid-row-start: 26;
}

.row-start-\[27\] {
  grid-row-start: 27;
}

.row-start-\[28\] {
  grid-row-start: 28;
}

.row-start-\[29\] {
  grid-row-start: 29;
}

.row-start-\[2\] {
  grid-row-start: 2;
}

.row-start-\[30\] {
  grid-row-start: 30;
}

.row-start-\[31\] {
  grid-row-start: 31;
}

.row-start-\[32\] {
  grid-row-start: 32;
}

.row-start-\[33\] {
  grid-row-start: 33;
}

.row-start-\[34\] {
  grid-row-start: 34;
}

.row-start-\[35\] {
  grid-row-start: 35;
}

.row-start-\[36\] {
  grid-row-start: 36;
}

.row-start-\[37\] {
  grid-row-start: 37;
}

.row-start-\[38\] {
  grid-row-start: 38;
}

.row-start-\[39\] {
  grid-row-start: 39;
}

.row-start-\[3\] {
  grid-row-start: 3;
}

.row-start-\[40\] {
  grid-row-start: 40;
}

.row-start-\[41\] {
  grid-row-start: 41;
}

.row-start-\[42\] {
  grid-row-start: 42;
}

.row-start-\[43\] {
  grid-row-start: 43;
}

.row-start-\[44\] {
  grid-row-start: 44;
}

.row-start-\[45\] {
  grid-row-start: 45;
}

.row-start-\[46\] {
  grid-row-start: 46;
}

.row-start-\[47\] {
  grid-row-start: 47;
}

.row-start-\[48\] {
  grid-row-start: 48;
}

.row-start-\[4\] {
  grid-row-start: 4;
}

.row-start-\[5\] {
  grid-row-start: 5;
}

.row-start-\[6\] {
  grid-row-start: 6;
}

.row-start-\[7\] {
  grid-row-start: 7;
}

.row-start-\[8\] {
  grid-row-start: 8;
}

.row-start-\[9\] {
  grid-row-start: 9;
}

.row-end-\[10\] {
  grid-row-end: 10;
}

.row-end-\[11\] {
  grid-row-end: 11;
}

.row-end-\[12\] {
  grid-row-end: 12;
}

.row-end-\[13\] {
  grid-row-end: 13;
}

.row-end-\[14\] {
  grid-row-end: 14;
}

.row-end-\[15\] {
  grid-row-end: 15;
}
/* ... */

